kubernetes/apps/default/pihole/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
subsets:
- addresses:
  - ip: ${SECRET_PIHOLE_IP}
  ports:
  - name: http
    port: 80
    protocol: TCP
