kubernetes/apps/default/pihole/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pihole
  annotations:
    nginx.ingress.kubernetes.io/app-root: /admin
spec:
  ingressClassName: internal
  rules:
  - host: &host pihole.${SECRET_DOMAIN_INTERNAL}
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
